--- a/Student Registration/Web.config
+++ b/Student Registration/Web.config
@@ -6,10 +6,11 @@
 <configuration>
 	<appSettings>
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-		<add key="Fetch" value="Select * from StudentReg"/>
+		<add key="Fetch" value="Select * from akhil_StudentReg"/>
 	</appSettings>
 	<connectionStrings>
 		<add name="DBConnection" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=SampleDB;Integrated Security=True" providerName="System.Data.SqlClient"/>
+		<add name="connection" connectionString="Data Source=sksdemoazuresql.database.windows.net,1433;Initial Catalog=knowledgesession;Persist Security Info=False;User ID=ssaminathan;Password=asdf1234$" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
